# indracore_api

./: .env.example  .gitignore  Cargo.toml  README.md
indracore_api/: Cargo.toml
indracore_api/src/: keyring.rs  lib.rs  primitives.rs
indracore_api/src/balance/: check_balance.rs  transaction.rs
indracore_api/src/contract/: call.rs  deploy.rs  instantiate.rs  mod.rs
indracore_api/src/contract/test/: erc20.wasm
indracore_api/src/contract/transcode/: mod.rs
indracore_api/src/contract/transcode/scon/: display.rs  parse.rs
