[package]
name = "indracore_api"
version = "2.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/indracore"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
