[package]
name = "indracore-api"
version = "2.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/indracore"

[dependencies]
substrate-subxt = { path = "../subxt" }
ink_metadata = { version = "3.0.0-rc2" }
scale = { package = "parity-scale-codec", version = "1.3.4" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main",  version = "2.0.0", package = "sp-core" }

async-std = { version = "1.6.4", features = ["attributes"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"]}

itertools = { version = "0.9.0" }
escape8259 = { version = "0.5.0"}
indexmap = { version = "1.6.0" }
nom = { version = "5.1.2" }
hex = { version = "0.4.2" }
assert_matches = "1.4.0"
serde_json = "1.0.57"
thiserror = "1.0.20"
anyhow = "1.0.32"
log = "0.4.11"
